adds info on async behaviour

--- a/06_DOM/node_manipulators.html
+++ b/06_DOM/node_manipulators.html
@@ -34,7 +34,7 @@
           Node Types:
            - Element Node: Represents HTML tags like <div>, <p>, etc.
            - Text Node: Represents the text inside elements.
-           - Comment Node: Represents comment nodes <!-- This is a comment -->
+           - Comment Node: Represents comment nodes 
            - Document Node: Represents the entire document.
 
             Let's demonstrate working with Nodes and Elements.
